@@ -9,6 +9,7 @@
         - Establish CSP plugin.
         - Added nonce helper to CSP plugin.
         - Remove no-js class in nonced inline script.
+        - Introduce HSTS header for https_only conf.
 
 0.40 2020-12-17
         - Modernize ES and fix in-loops.
